# shallow-water

./: .gitignore  .travis.yml  Cargo.toml  README.md  diffcomp.py  in_vstrip  parameters.toml  parameters.yaml  search-index.js  settings.html  source-files.js  spec_view.py
.cargo/: config
.github/workflows/: ci.yml  docs.yml
balinit/: Cargo.toml
balinit/src/: lib.rs  main.rs
balinit/src/testdata/: 18_2_qq_init.r8  32_4_sw_init.r8
benches/: nhswps.rs  setup.rs  spectral.rs  sta2dfft.rs  stafft.rs
common/: Cargo.toml
common/src/: constants.rs  lib.rs  sta2dfft.rs  utils.rs
common/src/snapshots/: test__init2dfft_ng120-2.snap  test__init2dfft_ng120-4.snap  test__init2dfft_ng30-2.snap  test__init2dfft_ng30-3.snap  test__init2dfft_ng30.snap  test__init2dfft_snapshot-2.snap  test__init2dfft_snapshot-3.snap  test__init2dfft_snapshot-4.snap  test__init2dfft_snapshot.snap  test__three_dim_243.snap  test__three_dim_442.snap  test__two_dim_48.snap
common/src/spectral/: mod.rs  test.rs
common/src/stafft/: constants.rs  forward.rs  mod.rs  reverse.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
nhswps/: Cargo.toml
nhswps/benches/: nhswps.rs
nhswps/src/: lib.rs  main.rs  test.rs
shallow_water/: Cargo.toml  all.html  index.html  macro.array2_from_file!.html  macro.array2_from_file.html  macro.array3_from_file!.html  macro.array3_from_file.html  sidebar-items.js
shallow_water/balinit/: fn.balinit.html  index.html  sidebar-items.js
shallow_water/benches/: setup.rs  spectral.rs  sta2dfft.rs  stafft.rs
shallow_water/constants/: constant.CDAMP.html  constant.CGW.html  constant.COF.html  constant.COFI.html  constant.CSQ.html  constant.FSQ.html  constant.GRAVITY.html  constant.HBAR.html  constant.NNU.html  constant.RTF516.html  constant.SINF2PI5.html  constant.SINFPI3.html  constant.SINRAT.html  index.html  sidebar-items.js
shallow_water/nhswps/: fn.nhswps.html  fn.savegrid.html  index.html  sidebar-items.js  struct.Output.html  struct.State.html
shallow_water/nhswps/advance/: fn.advance.html  index.html  sidebar-items.js
shallow_water/nhswps/coeffs/: fn.coeffs.html  index.html  sidebar-items.js
shallow_water/nhswps/cpsource/: fn.cpsource.html  index.html  sidebar-items.js
shallow_water/nhswps/psolve/: fn.psolve.html  index.html  sidebar-items.js
shallow_water/nhswps/source/: fn.source.html  index.html  sidebar-items.js
shallow_water/nhswps/vertical/: fn.vertical.html  index.html  sidebar-items.js
shallow_water/parameters/: index.html  sidebar-items.js  struct.Environment.html  struct.Numerical.html  struct.Parameters.html  struct.Physical.html
shallow_water/spectral/: index.html  sidebar-items.js  struct.Spectral.html
shallow_water/src/: lib.rs  sta2dfft.rs  test.rs  utils.rs
shallow_water/src/snapshots/: test__init2dfft_ng120-3.snap  test__init2dfft_ng120.snap  test__init2dfft_ng30-4.snap
shallow_water/src/spectral/: mod.rs  test.rs
shallow_water/src/stafft/: forward.rs  mod.rs  reverse.rs
shallow_water/src/stafft/snapshots/: test__factorisen_snapshot_1.snap  test__initfft_snapshot_1.snap
shallow_water/src/testdata/complete/18_4/: spectra.asc  spectra_x86_64-unknown-linux-gnu.asc
shallow_water/src/testdata/complete/18_4/2d/: d.r4  g.r4  q.r4
shallow_water/src/testdata/complete/18_4/3d/: g.r4  pn.r4
shallow_water/src/testdata/complete/32_4/: spectra.asc
shallow_water/src/testdata/complete/32_4/2d/: g.r4  q.r4
shallow_water/src/testdata/complete/32_4/3d/: pn.r4  ql.r4  w.r4
shallow_water/sta2dfft/: index.html  sidebar-items.js  struct.D2FFT.html
shallow_water/stafft/: fn.factorisen.html  fn.forfft.html  fn.forrdx2.html  fn.forrdx3.html  fn.forrdx4.html  fn.forrdx5.html  fn.forrdx6.html  fn.initfft.html  fn.revfft.html  fn.revrdx2.html  fn.revrdx3.html  fn.revrdx4.html  fn.revrdx5.html  fn.revrdx6.html  index.html  sidebar-items.js
shallow_water/stafft/forward/: fn.forrdx2.html  fn.forrdx3.html  fn.forrdx4.html  fn.forrdx5.html  fn.forrdx6.html
shallow_water/stafft/reverse/: fn.revrdx2.html  fn.revrdx3.html  fn.revrdx4.html  fn.revrdx5.html  fn.revrdx6.html
shallow_water/swto3d/: fn.swto3d.html  index.html  sidebar-items.js
shallow_water/utils/: fn.arr2zero.html  fn.arr3zero.html  fn.view2d.html  fn.view3d.html  fn.viewmut2d.html  fn.viewmut3d.html  index.html  sidebar-items.js
shallow_water/vstrip/: fn.init_pv_strip.html  index.html  sidebar-items.js
src/: balinit.rs  constants.f90  lib.rs  main.rs  makefile  nhswps.f90  parameters.f90  parameters.rs  spectral.f90  sta2dfft.f90  sta2dfft.rs  stafft.f90  swto3d.rs  test.rs  utils.rs  vstrip.rs
src/balinit/: main.rs  mod.rs
src/init/: balinit.f90  init.make  swto3d.f90  threevort.f90  vstrip.f90
src/nhswps/: advance.rs  coeffs.rs  cpsource.rs  main.rs  mod.rs  psolve.rs  source.rs  test.rs  vertical.rs
src/post/: accel.f90  energy.f90  gamma-tilde.f90  hspectrum.f90  nh-pressure.f90  post.make  slice.f90  vertical-velocity.f90  vspectrum.f90
src/shallow_water/: balinit.rs.html  constants.rs.html  lib.rs.html  parameters.rs.html  sta2dfft.rs.html  swto3d.rs.html  utils.rs.html  vstrip.rs.html
src/snapshots/: shallow_water__sta2dfft__test__init2dfft_ng120-2.snap  shallow_water__sta2dfft__test__init2dfft_ng120-3.snap  shallow_water__sta2dfft__test__init2dfft_ng120-4.snap  shallow_water__sta2dfft__test__init2dfft_ng120.snap  shallow_water__sta2dfft__test__init2dfft_ng30-2.snap  shallow_water__sta2dfft__test__init2dfft_ng30-3.snap  shallow_water__sta2dfft__test__init2dfft_ng30-4.snap  shallow_water__sta2dfft__test__init2dfft_ng30.snap
src/spectral/: mod.rs  test.rs
src/stafft/: mod.rs
src/swto3d/: main.rs  mod.rs
src/vstrip/: constants.rs  main.rs
swto3d/: Cargo.toml
swto3d/src/: lib.rs  main.rs
swto3d/src/testdata/: 128_32_sw_init.r8  18_2_qq_init.r8
tst/: monitor.asc  test.sh
vstrip/: Cargo.toml
vstrip/src/: lib.rs  main.rs
vstrip/src/snapshots/: test__ng128_snapshot.snap  test__ng32_snapshot.snap  test__snapshots.snap
vstrip/src/testdata/: qq_init_64.r8
(+56 files in other folders)
