[package]
name = "shallow-water"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

[profile.release]
lto = "fat"
panic = "abort"
debug = true
overflow-checks = false
codegen-units = 1

[dependencies]
ndarray = { version = "0.13", features = ["approx", "rayon", "serde"] }
log = "0.4"
clap = "2.33"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
quit = "1.0"
rayon = "1.3"
simplelog = "0.8"
bincode = "1.3"

[dev-dependencies]
insta = "0.16"
approx = "0.3"
lazy_static = "1.4"
criterion = "0.3"

[[bench]]
name = "spectral"
harness = false

[[bench]]
name = "sta2dfft"
harness = false

[[bench]]
name = "stafft"
harness = false

[[bench]]
name = "setup"
harness = false

[[bench]]
name = "nhswps"
harness = false
