[package]
name = "shallow-water"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

[profile.release]
lto = "fat"
panic = "abort"
debug = true
overflow-checks = false
codegen-units = 1

[dependencies]
byteorder = "1.3"
ndarray = { version = "0.14", features = ["approx", "rayon", "serde"] }
rayon = "1.5"

anyhow = "1.0"
clap = "2.33"
log = "0.4"
quit = "1.1"
simplelog = "0.8"

bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dev-dependencies]
approx = "0.3"
criterion = "0.3"
insta = "1.1"
lazy_static = "1.4"
tempdir = "0.3"

[[bench]]
name = "spectral"
harness = false

[[bench]]
name = "sta2dfft"
harness = false

[[bench]]
name = "stafft"
harness = false

[[bench]]
name = "setup"
harness = false

[[bench]]
name = "nhswps"
harness = false
