[package]
name = "shallow-water"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2021"

[profile.release]
lto = "fat"
panic = "abort"
debug = true
overflow-checks = false
codegen-units = 1

[dependencies]
byteorder = "1.4.3"
ndarray = { version = "0.15.6", features = ["approx", "rayon", "serde"] }
rayon = "1.5.3"

anyhow = "1.0.66"
clap = "2.33"
log = "0.4.17"
quit = "1.1.4"
simplelog = "0.12.0"

bincode = "1.3.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"

[dev-dependencies]
approx = "0.4"
criterion = "0.4.0"
insta = "1.21.1"
lazy_static = "1.4.0"
tempdir = "0.3.7"

[[bench]]
name = "spectral"
harness = false

[[bench]]
name = "sta2dfft"
harness = false

[[bench]]
name = "stafft"
harness = false

[[bench]]
name = "setup"
harness = false

[[bench]]
name = "nhswps"
harness = false
