[package]
name = "balinit"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

[dependencies]
shallow_water = { path = "../shallow_water", version = "0.1.0" }
clap = "2.33.0"
byteorder = "1.3.2"
toml = "0.5.5"
log = "0.4.8"
simplelog = "0.7.4"

[dev-dependencies]
approx = "0.3.2"

[lib]
name = "libbalinit"
path = "src/lib.rs"

[[bin]]
name = "balinit"
path = "src/main.rs"
