[package]
name = "nhswps"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

[dependencies]
shallow_water = { path = "../shallow_water", version = "0.1.0" }
clap = "2.33.0"
byteorder = "1.3.2"
toml = "0.5.5"
ndarray = "0.13.0"

[dev-dependencies]
byteorder = "1.3.2"
lazy_static = "1.4.0"
approx = "0.3.2"
criterion = "0.3.0"

[lib]
name = "libnhswps"
path = "src/lib.rs"

[[bin]]
name = "nhswps"
path = "src/main.rs"

[[bench]]
name = "nhswps"
harness = false
