[package]
name = "shallow_water"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

[dependencies]
ndarray = { version = "0.13.0", features = ["approx", "serde", "rayon"] }

[dev-dependencies]
insta = "0.12.0"
byteorder = "1.3.2"
approx = "0.3.2"
lazy_static = "1.4.0"
criterion = "0.3.0"
vstrip = { path = "../vstrip" }
swto3d = { path = "../swto3d" }
balinit = { path = "../balinit" }
nhswps = { path = "../nhswps" }

[[bench]]
name = "spectral"
harness = false

[[bench]]
name = "sta2dfft"
harness = false

[[bench]]
name = "stafft"
harness = false

[[bench]]
name = "setup"
harness = false
