[package]
name = "vstrip"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
byteorder = "1.3.2"
toml = "0.5.5"
ndarray = { version = "0.13.0", features = ["approx"] }

[dev-dependencies]
approx = "0.3.2"
shallow_water = { path = "../shallow_water" }

[lib]
name = "libvstrip"
path = "src/lib.rs"

[[bin]]
name = "vstrip"
path = "src/main.rs"
